--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 	
 	<div class="size1 bg0 where1-parent">
 		<!-- Coutdown -->
-		<div class="flex-c-m bg-img1 size2 where1 overlay1 where2 respon2" style="background-image: url('images/bg01.jpg');">
+		<div class="flex-c-m bg-img1 size2 where1 overlay1 where2 respon2" style="background-image: url('images/miller3.jpg');">
 			<div class="wsize2 flex-w flex-c-m cd100 js-tilt">
 				<div class="flex-col-c-m size6 bor2 m-l-10 m-r-10 m-t-15">
 					<span class="l2-txt1 p-b-9 days">35</span>
@@ -52,11 +52,12 @@
 		<div class="size3 flex-col-sb flex-w p-l-75 p-r-75 p-t-45 p-b-45 respon1">
 			<div class="wrap-pic1">
 				<img src="images/icons/logo.png" alt="LOGO">
+				<span class="m1-txt2">Falling4word</span>
 			</div>
 
 			<div class="p-t-50 p-b-60">
 				<p class="m1-txt1 p-b-36">
-					Our website is <span class="m1-txt2">Coming Soon</span>, follow us for update now!
+					Falling4Word is <span class="m1-txt2">Coming Soon</span>, follow us for update now!
 				</p>
 
 				<form class="contact100-form validate-form">
@@ -83,17 +84,6 @@
 			</div>
 
 			<div class="flex-w">
-				<a href="#" class="flex-c-m size5 bg3 how1 trans-04 m-r-5">
-					<i class="fa fa-facebook"></i>
-				</a>
-
-				<a href="#" class="flex-c-m size5 bg4 how1 trans-04 m-r-5">
-					<i class="fa fa-twitter"></i>
-				</a>
-
-				<a href="#" class="flex-c-m size5 bg5 how1 trans-04 m-r-5">
-					<i class="fa fa-youtube-play"></i>
-				</a>
 			</div>
 		</div>
 	</div>
@@ -118,13 +108,13 @@
 		$('.cd100').countdown100({
 			/*Set Endtime here*/
 			/*Endtime must be > current time*/
-			endtimeYear: 0,
-			endtimeMonth: 0,
-			endtimeDate: 35,
-			endtimeHours: 18,
+			endtimeYear: 2019,
+			endtimeMonth: 11,
+			endtimeDate: 4,
+			endtimeHours: 16,
 			endtimeMinutes: 0,
 			endtimeSeconds: 0,
-			timeZone: "" 
+			timeZone: "America/New_York" 
 			// ex:  timeZone: "America/New_York"
 			//go to " http://momentjs.com/timezone/ " to get timezone
 		});
