--- a/index.html
+++ b/index.html
@@ -326,7 +326,7 @@
           </div>
 
         </div>
-<img src="images/Podcast.png" alt="Image" height="400px" style="margin-bottom: 30px;">
+<img src="images/Podcast.png" alt="Image" class="img-fluid">
       </div>
     </section>
     
